c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_types/extern_variable_initializer.c
int main(void) {
    /* An extern variable cannot have an initializer */
    extern int i = 0;
    return i;
}